# VibeYTM

./: .gitignore  BUILD_PROMPT.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  TEST_CHECKLIST.md  TODOS.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  vitest.config.ts
.github/workflows/: patch-release.yml  weekly-release.yml
app/: README.md  SWIFTUI_CHECKLIST.md  VibeYTM.entitlements  build.sh
app/VibeYTMApp/: Package.swift
docs/design/: README.md  dongli-SwiftUI-design.md  dongli-SwiftUI-eng-review-test-plan.md  (+1 more)
scripts/: check-cfg-debug-assertions.sh
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: about.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: about.rs  browse.rs  cache.rs  mod.rs  notification.rs  player.rs  settings.rs  updater.rs
src-tauri/src/events/: mod.rs  types.rs
src-tauri/src/integrations/: global_shortcuts.rs  mod.rs  notifications.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/protocols/: cache_image.rs  image_mem_cache.rs  mod.rs
src-tauri/src/state/: episode_progress.rs  mod.rs  persistence.rs  player.rs  settings.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/webview_bridge/: api.rs  api_cache.rs  mod.rs  poller.rs
src-tauri/src/ytm_api/: mod.rs  types.rs
src-tauri/tests/: journeys.rs  updater_check_once.rs
v1/: BUILD_PROMPT.md  CLAUDE.md  README.md  RESEARCH.md  TEST_CHECKLIST.md  index.html  vitest.config.ts
(+209 files in other folders)
